# uvtestbtn

./: .copier-answers.yml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
src/uvtestbtn/: __init__.py  cli.py
tests/: __init__.py  test_cli.py  test_import.py
